<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="bacon_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="action_settings">Settings</string>
</resources>
