<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#e1eaff">

    <TextView android:text="@string/title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#5b81ff"
        android:textSize="20dp"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/Button"
        android:text="@string/spotify_streamer"
        android:id="@+id/button_spotify"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/textView" />

    <Button
        android:text="@string/scores_app"
        android:id="@+id/button_score"
        android:layout_below="@+id/button_spotify"
        style="@style/Button" />

    <Button
        style="@style/Button"
        android:text="@string/library_app"
        android:id="@+id/button_library"
        android:layout_below="@+id/button_score" />

    <Button
        style="@style/Button"
        android:text="@string/build_it_bigger"
        android:id="@+id/button_bib"
        android:layout_below="@+id/button_library" />

    <Button
        style="@style/Button"
        android:text="@string/bacon_reader"
        android:id="@+id/button_xyz"
        android:layout_below="@+id/button_bib" />

    <Button
        style="@style/Button"
        android:text="@string/capstone"
        android:id="@+id/button_capstone"
        android:background="@color/button_bottom"
        android:layout_below="@+id/button_xyz" />

</RelativeLayout>
